# ExPratico

./: .gitignore  Dockerfile  Jogo das Capitais.py  README.md  jogo_das_capitais.txt  nfs_volumemount_cleaner.py  requirements.txt  sign_key.py  tla_cleanup_job.sh  tla_cleanup_netscalers_job.sh
tla_decommission/: .coveragerc  .gitignore  .pep8  .pre-commit-config.yaml  Makefile  README.md  dev_requirements.txt  jenkins_builder.sh  logging.yml  osp16_jenkins_builder.sh  requirements.txt  run_job.sh  setup.cfg  tests_generator.py
tla_decommission/docs/: code_structure.drawio  components_workflow_phase1.drawio  components_workflow_phase2.drawio
tla_decommission/src/tladecomm/: change_manager_helper.py  context.py  decomm_helper.py  email_helper.py  get_sdn_rules.py  guard_helper.py  job.py  sdn_email_helper.py  sdn_helper.py
tla_decommission/tests/tladecomm/: test_change_manager_helper.py  test_context.py  test_decomm_helper.py  test_email_helper.py  test_guard_helper.py  test_job.py
tla_decommission/var/emails/: html_sdn.html  html_sdn.html.j2
tla_decommission/var/history/: abcw.yml  acwlsg.yml  afr.yml  aggregates.yml  alabf.yml  alapp.yml  asasbg.yml  asp.yml  atlj.yml  betmon.yml  bgabf.yml  bgapp.yml  bgipoc.yml  bgkbf.yml  bgkpp.yml  bla.yml  boasbg.yml  box.yml  bpm.yml  bsds.yml  bsk.yml  caabf.yml  caapp.yml  cdnsbw.yml  cdnsmspp.yml  cdnsmx.yml  cdnsmxios.yml  cdntbd.yml  cnf.yml  cnlesm.yml  cnlmgw.yml  cnlsrv.yml  detestbarrosf.yml  detestbmr.yml  detestbmr2.yml  detestbmr3.yml  detestbmr4.yml  detestbmr5.yml  detestcookca.yml  detestjun.yml  (+154 more)
(+26 files in other folders)
