[metadata]
name = tla_decommission
version = 0.0.1

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[flake8]
enable-extensions = G
ignore =
    E226,E24
    W50,W690
import-order-style = google
application-import-names = sqlalchemy,test
max_line_length = 79
